# BreakoutAndroid

app/: CMakeLists.txt  build.gradle
app/libs/libpng/: CMakeLists.txt
app/libs/rapidjson/: CMakeLists.txt
app/src/androidTest/java/breakout/yellowball/com/newbreakout/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/data/: level_one.json
app/src/main/assets/shaders/: particle.fs  particle.vs  post_processor.fs  post_processor.vs  sprite.fs  sprite.vs  text.fs  text.vs
app/src/main/cpp/: ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  native-lib.cpp  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  resource_manager.cpp  resource_manager.h  reward.cpp  reward.h  shader.cpp  shader.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
app/src/main/java/breakout/yellowball/com/newbreakout/: Breakout.java  RenderWrapper.java
app/src/main/res/layout/: activity_breakout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/breakout/yellowball/com/newbreakout/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
